# solar_oven

./: .gitignore  CMakeLists.txt  README.md
fonts/: FreeMono12pt7b.h  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  font.h
src/: adafruit.c  debug.c  debug.h  display.c  display.h  https.c  https.h  main.c  ntp.c  pins.h  pulsewidth.pio  sensors.c  state.h  touchscreen.c  touchscreen.h  ui.c  ui.h  wifi.c  wifi.h
src/wconfig/: lwipopts.h  mbedtls_config.h
